--- a/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
+++ b/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane prefHeight="650" prefWidth="750" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateDeleteMenu">
    <children>
-      <Button fx:id="backButton" layoutX="30.0" layoutY="24.0" mnemonicParsing="false" text="Back">
+      <Button fx:id="backButton" layoutX="30.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back">
          <font>
             <Font size="16.0" />
          </font>
@@ -30,7 +30,7 @@
             <TableColumn fx:id="grillColumn" prefWidth="60" text="Grill" />        
          </columns>
       </TableView>
-      <Button fx:id="saveButton" layoutX="89.0" layoutY="581.0" mnemonicParsing="false" text="Save Changes" onAction = "#handleSaveButtonAction">
+      <Button fx:id="saveButton" layoutX="89.0" layoutY="581.0" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="Save Changes">
          <font>
             <Font size="20.0" />
          </font>
@@ -42,7 +42,7 @@
       </Button>
       <TextField fx:id="nameField" layoutX="164.0" layoutY="381.0" />
       <TextField fx:id="priceField" layoutX="163.0" layoutY="419.0" />
-      <ComboBox fx:id="typeComboBox" layoutX="164.0" layoutY="495.0" prefWidth="150.0" />
+      <ComboBox fx:id="grillComboBox" layoutX="164.0" layoutY="495.0" prefWidth="150.0" visible="false" />
       <Text layoutX="95.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
          <font>
             <Font size="14.0" />
@@ -58,7 +58,7 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <Text layoutX="94.0" layoutY="513.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grill:">
+      <Text fx:id="grillText" layoutX="94.0" layoutY="513.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grill:" visible="false">
          <font>
             <Font size="14.0" />
          </font>
@@ -68,6 +68,6 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <TextField fx:id="priceField1" layoutX="164.0" layoutY="455.0" />
+      <TextField fx:id="optionalsField" layoutX="164.0" layoutY="455.0" />
    </children>
 </AnchorPane>
