--- a/BiteMeClient/src/ClientGUI/WorkerPendingOrders.fxml
+++ b/BiteMeClient/src/ClientGUI/WorkerPendingOrders.fxml
@@ -7,8 +7,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/22" fx:controller="ClientGUI.WorkerPendingOrders">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.WorkerPendingOrders">
     <children>
         <Label layoutX="330.0" layoutY="10.0" style="-fx-font-size: 24; -fx-font-weight: bold;" text="Pending Orders" textAlignment="CENTER" underline="true">
          <font>
@@ -27,8 +28,12 @@
             </columns>
         </TableView>
         <TextField fx:id="etaTextField" layoutX="50.0" layoutY="470.0" prefWidth="200.0" promptText="Estimated Time of Arrival" visible="false" />
-        <Button fx:id="approveOrderButton" disable="true" layoutX="50.0" layoutY="510.0" onAction="#handleApproveOrderAction" prefHeight="30.0" prefWidth="150.0" text="APPROVE ORDER" />
-        <Button fx:id="orderReadyButton" disable="true" layoutX="230.0" layoutY="510.0" onAction="#handleOrderReadyAction" prefHeight="30.0" prefWidth="150.0" text="ORDER READY" />
-        <Label fx:id="errorLabel" layoutX="620.0" layoutY="570.0" style="-fx-text-fill: red; -fx-font-size: 14px;"/>
+        <Button fx:id="approveOrderButton" disable="true" layoutX="215.0" layoutY="500.0" onAction="#handleApproveOrderAction" prefHeight="30.0" prefWidth="150.0" text="APPROVE ORDER" />
+        <Button fx:id="orderReadyButton" disable="true" layoutX="395.0" layoutY="500.0" onAction="#handleOrderReadyAction" prefHeight="30.0" prefWidth="150.0" text="ORDER READY" />
+      <Text fx:id="errorText" fill="RED" layoutX="50.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" visible="false" wrappingWidth="700.0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
     </children>   
 </AnchorPane>
