--- a/BiteMeClient/src/ClientGUI/CustomerInformationUpdate.fxml
+++ b/BiteMeClient/src/ClientGUI/CustomerInformationUpdate.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="700.0" prefWidth="700.0" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerInformationUpdateController">
+<AnchorPane prefHeight="750.0" prefWidth="700.0" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.CustomerInformationUpdateController">
    <children>
       <Button fx:id="backButton" layoutX="20.0" layoutY="20.0" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" onAction="#handleBack" styleClass="logout-button" text="Back" />
       
@@ -35,12 +36,13 @@
       <TextField fx:id="lastNameField" layoutX="191.0" layoutY="370.0" maxWidth="323.0" prefHeight="48.0" prefWidth="323.0" promptText="Last Name" />
       <TextField fx:id="emailField" layoutX="191.0" layoutY="430.0" maxWidth="323.0" prefHeight="48.0" prefWidth="323.0" promptText="Email" />
       <TextField fx:id="phoneNumberField" layoutX="191.0" layoutY="490.0" maxWidth="323.0" prefHeight="48.0" prefWidth="323.0" promptText="Phone Number" />
-      <TextField fx:id="creditCardField" layoutX="191.0" layoutY="550.0" maxWidth="323.0" prefHeight="48.0" prefWidth="323.0" promptText="Credit Card (optional)" />
-      <Text fx:id="errorText" fill="RED" layoutX="191.0" layoutY="620.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" visible="false" wrappingWidth="323.0">
+      <TextField fx:id="creditCardField" layoutX="191.0" layoutY="607.0" maxWidth="323.0" prefHeight="48.0" prefWidth="323.0" promptText="Credit Card (optional)" />
+      <ComboBox fx:id="branchComboBox" layoutX="189.0" layoutY="550.0" maxWidth="323.0" prefHeight="48.0" prefWidth="323.0" promptText="Select Branch" />
+      <Text fx:id="errorText" fill="RED" layoutX="191.0" layoutY="680.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" visible="false" wrappingWidth="323.0">
          <font>
             <Font size="14.0" />
          </font>
       </Text>
-      <Button fx:id="updateButton" layoutX="257.0" layoutY="636.0" mnemonicParsing="false" onAction="#handleUpdate" prefHeight="50.0" prefWidth="191.0" text="Activate Customer" />
+      <Button fx:id="updateButton" layoutX="257.0" layoutY="696.0" mnemonicParsing="false" onAction="#handleUpdate" prefHeight="50.0" prefWidth="191.0" text="Activate Customer" />
    </children>
 </AnchorPane>
