--- a/BiteMeClient/src/ClientGUI/OrdersReportWindow.fxml
+++ b/BiteMeClient/src/ClientGUI/OrdersReportWindow.fxml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
 
-<StackPane prefWidth="450.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/22" fx:controller="ClientGUI.OrdersReportController">
-    <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#f0f0f0" height="200" width="450" />
-    <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="438.0" spacing="25">
-        <padding>
-            <Insets bottom="30" left="30" right="30" top="30" />
-        </padding>
-        <Label style="-fx-font-size: 28; -fx-font-weight: bold; -fx-text-fill: #2c3e50;" text="Orders Report" />
-        <TableView fx:id="ordersTable" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="159.0" prefWidth="390.0" VBox.vgrow="ALWAYS">
-            <columns>
-                <TableColumn fx:id="dishTypeColumn" prefWidth="150" text="Dish Type" />
-                <TableColumn fx:id="amountColumn" prefWidth="150" text="Amount" />
-            </columns>
-            <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-        </TableView>
-        <Button onAction="#handleClose" style="-fx-font-size: 16; -fx-background-color: #3498db; -fx-text-fill: white; -fx-padding: 10 20; -fx-background-radius: 5;" text="Close" />
-    </VBox>
-</StackPane>
+<AnchorPane prefHeight="450.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.OrdersReportController">
+   <children>
+      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#f0f0f0" height="450.0" width="450.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <VBox alignment="CENTER" spacing="10" AnchorPane.topAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <Label text="Orders Report" style="-fx-font-size: 28; -fx-font-weight: bold; -fx-text-fill: #2c3e50;" />
+         <Label fx:id="branchLabel" style="-fx-font-size: 18; -fx-text-fill: #34495e;" />
+         <Label fx:id="monthYearLabel" style="-fx-font-size: 18; -fx-text-fill: #34495e;" />
+      </VBox>
+      <TableView fx:id="ordersTable" layoutX="30.0" layoutY="140.0" prefHeight="200.0" prefWidth="390.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+        <columns>
+          <TableColumn fx:id="dishTypeColumn" prefWidth="195.0" text="Dish Type" />
+          <TableColumn fx:id="amountColumn" prefWidth="195.0" text="Amount" />
+        </columns>
+      </TableView>
+      <Button layoutX="185.0" layoutY="380.0" onAction="#handleClose" style="-fx-font-size: 16; -fx-background-color: #3498db; -fx-text-fill: white; -fx-padding: 10 20; -fx-background-radius: 5;" text="Close" AnchorPane.bottomAnchor="30.0" />
+   </children>
+</AnchorPane>
