--- a/BiteMeClient/src/ClientGUI/QuarterlyReport.fxml
+++ b/BiteMeClient/src/ClientGUI/QuarterlyReport.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
@@ -16,6 +17,9 @@
             <NumberAxis label="Number of Days" />
         </yAxis>
     </BarChart>
-    <Label fx:id="reportIncome" text="Total Income: " AnchorPane.leftAnchor="10" AnchorPane.bottomAnchor="40" />
+    <HBox alignment="CENTER_LEFT" spacing="20" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="40">
+        <Label fx:id="reportIncome" text="Total Income: " />
+        <Label fx:id="monthlyIncome" HBox.hgrow="ALWAYS" alignment="CENTER" />
+    </HBox>
     <Button text="Close" onAction="#closeWindow" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10" />
 </AnchorPane>
