--- a/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
+++ b/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="625" prefWidth="750" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateDeleteMenu">
+<AnchorPane prefHeight="600" prefWidth="750" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateDeleteMenu">
    <children>
       <Button fx:id="backButton" layoutX="30.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back">
          <font>
@@ -30,19 +30,19 @@
             <TableColumn fx:id="grillColumn" prefWidth="70" text="Grill" />        
          </columns>
       </TableView>
-      <Button fx:id="saveButton" layoutX="93.0" layoutY="559.0" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="Save Changes">
+      <Button fx:id="saveButton" layoutX="93.0" layoutY="524.0" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="Save Changes">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button fx:id="deleteButton" layoutX="530.0" layoutY="559.0" mnemonicParsing="false" onAction="#handleDeleteButtonAction" text="Delete Dish">
+      <Button fx:id="deleteButton" layoutX="530.0" layoutY="524.0" mnemonicParsing="false" onAction="#handleDeleteButtonAction" text="Delete Dish">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
       <TextField fx:id="nameField" layoutX="164.0" layoutY="381.0" />
       <TextField fx:id="priceField" layoutX="163.0" layoutY="419.0" />
-      <ComboBox fx:id="grillComboBox" layoutX="164.0" layoutY="495.0" prefWidth="150.0" visible="false" />
+      <ComboBox fx:id="grillComboBox" layoutX="164.0" layoutY="459.0" prefWidth="150.0" />
       <Text layoutX="95.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
          <font>
             <Font size="14.0" />
@@ -53,21 +53,15 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <Text layoutX="95.0" layoutY="474.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Optionals:">
+      <Text fx:id="grillText" layoutX="94.0" layoutY="477.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grill:">
          <font>
             <Font size="14.0" />
          </font>
       </Text>
-      <Text fx:id="grillText" layoutX="94.0" layoutY="513.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grill:" visible="false">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Text fx:id="errorText" fill="RED" layoutX="95.0" layoutY="546.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Text" textAlignment="CENTER" visible="false" wrappingWidth="585.3333333333333">
+      <Text fx:id="errorText" fill="RED" layoutX="95.0" layoutY="513.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Text" textAlignment="CENTER" visible="false" wrappingWidth="585.3333333333333">
          <font>
             <Font size="16.0" />
          </font>
       </Text>
-      <TextField fx:id="optionalsField" layoutX="164.0" layoutY="455.0" />
    </children>
 </AnchorPane>
