--- a/BiteMeClient/src/ClientGUI/WorkerPendingOrders.fxml
+++ b/BiteMeClient/src/ClientGUI/WorkerPendingOrders.fxml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.WorkerPendingOrders">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.WorkerPendingOrders">
     <children>
         <Label layoutX="330.0" layoutY="10.0" style="-fx-font-size: 24; -fx-font-weight: bold;" text="Pending Orders" textAlignment="CENTER" underline="true">
-         <font>
-            <Font name="Aharoni Bold" size="28.0" />
-         </font></Label>
+            <font>
+                <Font name="Aharoni Bold" size="28.0" />
+            </font>
+        </Label>
         <Button fx:id="backButton" layoutX="10.0" layoutY="10.0" onAction="#handleBackButtonAction" prefHeight="30.0" prefWidth="110.0" text="BACK" />
-        
+
         <TableView fx:id="orderTableView" layoutX="50.0" layoutY="60.0" prefHeight="400.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="orderIdColumn" prefWidth="50.0" text="ID" />
@@ -27,13 +28,16 @@
                 <TableColumn fx:id="statusColumn" prefWidth="110.0" text="Status" />
             </columns>
         </TableView>
-        <TextField fx:id="etaTextField" layoutX="50.0" layoutY="470.0" prefWidth="200.0" promptText="Estimated Time of Arrival" visible="false" />
-        <Button fx:id="approveOrderButton" disable="true" layoutX="215.0" layoutY="500.0" onAction="#handleApproveOrderAction" prefHeight="30.0" prefWidth="150.0" text="APPROVE ORDER" />
-        <Button fx:id="orderReadyButton" disable="true" layoutX="395.0" layoutY="500.0" onAction="#handleOrderReadyAction" prefHeight="30.0" prefWidth="150.0" text="ORDER READY" />
-      <Text fx:id="errorText" fill="RED" layoutX="50.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" visible="false" wrappingWidth="700.0">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-    </children>   
+
+        <ComboBox fx:id="etaComboBox" layoutX="325.0" layoutY="491.0" prefWidth="150.0" promptText="-Choose Comment-" visible="true">
+        </ComboBox>
+        <Button fx:id="approveOrderButton" disable="true" layoutX="140.0" layoutY="488.0" onAction="#handleApproveOrderAction" prefHeight="30.0" prefWidth="150.0" text="APPROVE ORDER" />
+        <Button fx:id="orderReadyButton" disable="true" layoutX="511.0" layoutY="488.0" onAction="#handleOrderReadyAction" prefHeight="30.0" prefWidth="150.0" text="ORDER READY" />
+        
+        <Text fx:id="errorText" fill="RED" layoutX="50.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" visible="false" wrappingWidth="700.0">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Text>
+    </children>
 </AnchorPane>
