--- a/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
+++ b/BiteMeClient/src/ClientGUI/UpdateDeleteMenu.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600" prefWidth="800" styleClass="blue-gradient-1, update-delete-menu" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.UpdateDeleteMenu">
@@ -17,7 +18,7 @@
          <Button fx:id="backButton" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back" />
       </HBox>
       
-      <TableView fx:id="menuTableView" layoutX="30.0" layoutY="80.0" prefHeight="250.0" prefWidth="740.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+      <TableView fx:id="menuTableView" layoutX="101.33333333333333" layoutY="74.0" prefHeight="250.0" prefWidth="601.0" AnchorPane.leftAnchor="101.0" AnchorPane.rightAnchor="98.0">
          <columns>
             <TableColumn fx:id="typeColumn" prefWidth="120" text="Type" />
             <TableColumn fx:id="nameColumn" prefWidth="140" text="Name" />
@@ -27,18 +28,21 @@
          </columns>
       </TableView>
       
-      <Text styleClass="label-text" layoutX="30.0" layoutY="365.0" text="Name:" AnchorPane.leftAnchor="30.0" />
-      <TextField fx:id="nameField" layoutX="100.0" layoutY="345.0" prefWidth="200.0" AnchorPane.leftAnchor="100.0" />
+      <Text layoutX="103.33333333333333" layoutY="362.0" styleClass="label-text" text="Name:" AnchorPane.leftAnchor="103.33333333333333" />
+      <TextField fx:id="nameField" layoutX="174.66666666666666" layoutY="342.0" prefWidth="200.0" AnchorPane.leftAnchor="174.66666666666666" />
       
-      <Text styleClass="label-text" layoutX="30.0" layoutY="405.0" text="Price:" AnchorPane.leftAnchor="30.0" />
-      <TextField fx:id="priceField" layoutX="100.0" layoutY="385.0" prefWidth="200.0" AnchorPane.leftAnchor="100.0" />
+      <Text layoutX="103.33333333333333" layoutY="402.0" styleClass="label-text" text="Price:" AnchorPane.leftAnchor="103.33333333333333" />
+      <TextField fx:id="priceField" layoutX="174.66666666666666" layoutY="382.0" prefWidth="200.0" AnchorPane.leftAnchor="174.66666666666666" />
       
-      <Text fx:id="grillText" styleClass="label-text" layoutX="30.0" layoutY="445.0" text="Grill:" AnchorPane.leftAnchor="30.0" />
-      <ComboBox fx:id="grillComboBox" layoutX="100.0" layoutY="425.0" prefWidth="200.0" AnchorPane.leftAnchor="100.0" />
+      <Text fx:id="grillText" layoutX="103.33333333333333" layoutY="442.0" styleClass="label-text" text="Grill:" AnchorPane.leftAnchor="103.33333333333333" />
+      <ComboBox fx:id="grillComboBox" layoutX="174.66666666666666" layoutY="422.0" prefWidth="200.0" AnchorPane.leftAnchor="174.66666666666666" />
       
       <Button fx:id="saveButton" layoutX="200.0" layoutY="500.0" mnemonicParsing="false" onAction="#handleSaveButtonAction" text="Save Changes" AnchorPane.bottomAnchor="30.0" />
       <Button fx:id="deleteButton" layoutX="500.0" layoutY="500.0" mnemonicParsing="false" onAction="#handleDeleteButtonAction" text="Delete Dish" AnchorPane.bottomAnchor="30.0" />
       
-      <Text fx:id="errorText" styleClass="error-text" layoutX="30.0" layoutY="570.0" textAlignment="CENTER" visible="false" wrappingWidth="740.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.bottomAnchor="10.0" />
+      <Text fx:id="errorText" fill="RED" layoutX="25.333333333333332" layoutY="508.7740885416667" styleClass="error-text" text="error" textAlignment="CENTER" visible="false" wrappingWidth="740.0" AnchorPane.bottomAnchor="88.0" AnchorPane.leftAnchor="25.333333333333332" AnchorPane.rightAnchor="35.33333333333337">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
    </children>
 </AnchorPane>
